# back_puntos_flesan

./: .env.example  .gitignore  ARQUITECTURA_CAPAS.md  BENEFICIOS_FILE_UPLOAD_README.md  BENEFICIOS_README.md  COLABORADORES_README.md  DATAWAREHOUSE_README.md  MIGRACION_COMPLETADA.md  Pipfile  README.md  USERS_MODULE_README.md  create_admin_user.py  debug_colaboradores.py  diagnose_env.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  run_migrations.py  run_user_migration.py  test_beneficios.py  test_beneficios_simple.py  test_colaboradores.py  test_config.py  test_datawarehouse.py  test_file_structure.py  test_file_upload.py  verify_cors.py  verify_migration.py
app/api/: __init__.py
app/api/routers/: __init__.py  beneficio_router.py  canje_router.py  colaboradores_router.py  datawarehouse_router.py  health_router.py  user_router.py
app/api/schemas/: __init__.py  beneficio_schema.py  canje_schema.py  user_schema.py
app/application/beneficios/: __init__.py  commands.py  dto.py  ports.py  queries.py
app/application/datawarehouse/dto/: colaboradores_dto.py
app/application/datawarehouse/services/: colaboradores_service.py  datawarehouse_service.py
app/application/users/: __init__.py  commands.py  dto.py  ports.py  queries.py
app/core/: auth.py  config.py  database.py  exceptions.py  logger.py  security.py
app/core/utils/: date_utils.py  file_utils.py  send_email.py  validation.py
app/domain/beneficios/: __init__.py
app/domain/beneficios/entities/: __init__.py  beneficio.py
app/domain/beneficios/services/: __init__.py  (+1 more)
app/domain/users/: __init__.py
app/infrastructure/: __init__.py
app/infrastructure/auth/: __init__.py  dependencies.py  dev_auth.py  jwks_client.py  permissions.py
app/infrastructure/datawarehouse/: __init__.py  client.py  connection.py  exceptions.py  query_builder.py
app/infrastructure/db/: __init__.py  session.py
app/interfaces/api/: __init__.py  dependencies.py
app/repositories/: __init__.py  beneficio_repository.py  canje_repository.py  user_repository.py
app/services/: __init__.py  beneficio_service.py  canje_service.py  email_service.py  user_service.py
app/sql/: __init__.py  create_table_history.sql  user_queries.sql
deploy/: README.md  apache.conf  deploy.sh  fastapi_app.service  nginx.conf
docs/: SISTEMA_CANJES.md
migrations/: 001_create_beneficios_table.sql  002_update_users_table.sql  003_create_historial_canjes_table.sql
templates/: email_beneficio.html  index.html
tests/: conftest.py
tests/e2e/: test_user_endpoints.py
tests/integration/: test_user_repository.py
tests/unit/application/: test_create_user_command.py
tests/unit/domain/: test_user_entity.py
(+18 files in other folders)
